[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Entities/Player.gd" type="Script" id=1]
[ext_resource path="res://Sounds/FootStep1.ogg" type="AudioStream" id=2]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.219608, 0.376471, 0.466667, 1 )

[sub_resource type="Environment" id=2]
background_mode = 1
background_sky = SubResource( 1 )
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0.360784, 0.341176, 0.403922, 1 )
fog_sun_amount = 1.0
adjustment_brightness = 0.5

[sub_resource type="CapsuleShape" id=3]
radius = 0.6
height = 3.0

[sub_resource type="Animation" id=4]
resource_name = "Blackoff"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Transition/Black:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/Black:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Transition/Black:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/Black:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 1.6, 0.5 )

[node name="Player" type="KinematicBody"]
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )

[node name="Transition" type="CanvasLayer" parent="."]

[node name="Black" type="ColorRect" parent="Transition"]
visible = false
margin_left = -200.0
margin_top = -200.0
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
environment = SubResource( 2 )
current = true

[node name="DirectionalLight" type="SpotLight" parent="Pivot/Camera"]
light_energy = 2.0
shadow_enabled = true
spot_range = 50.0
spot_attenuation = 8.0
spot_angle_attenuation = 0.03

[node name="RayCast" type="RayCast" parent="Pivot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Blackoff = SubResource( 4 )
anims/Blackout = SubResource( 5 )

[node name="Footsteps" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
stream = ExtResource( 2 )

[node name="Footstep" type="Timer" parent="."]
one_shot = true

[node name="CanStand" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CanStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
shape = SubResource( 6 )
[connection signal="animation_finished" from="AnimPlayer" to="." method="_on_AnimPlayer_animation_finished"]
[connection signal="body_entered" from="CanStand" to="." method="_on_CanStand_body_entered"]
[connection signal="body_exited" from="CanStand" to="." method="_on_CanStand_body_exited"]
